Bug 92357 - window is maximized to wrong position
Summary: window is maximized to wrong position
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-09 15:43 UTC by Marek Chalupa
Modified: 2015-10-21 10:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Marek Chalupa 2015-10-09 15:43:22 UTC
when maximizing a window on secondary output, it either disappears or almost disappers when the output is large enough. It is just shifted to the right so much that I can see just a small (or no) part of the window. Maximizing on primary output is ok
Comment 1 Marek Chalupa 2015-10-21 10:25:17 UTC
fixed by 6ce78992a04b


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.